# kof-rs

./: Cargo.toml  README.md
examples/: ase.rs  ase2.rs
src/: hero.rs  lib.rs  main.rs
src/anim/: sprite.rs
src/input/: keymap.rs
src/res/: sprite.rs
src/window/: cube.rs
tests/: run.ase  stop.ase  walk.ase
