[package]
name = "kof-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asefile = "0.3.5"
image = "0.24.3"
minifb = { version = "0.23.0", features = ["wayland"] }


[profile.dev.package.asefile]
opt-level = 3
