[package]
name = "kuma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# image
asefile = "0.3.5"
image = "0.24.5"
fir = { package = "fast_image_resize", version = "2.4.0" }

# window
minifb = { version = "0.23.0", features = ["wayland","x11"] }

# debug
log = "0.4.17"
simple_logger = { version = "4.0.0", features = ["colors", "threads"] }

[profile.release]
strip = true
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"

[profile.dev.package.asefile]
strip = true
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = false
